--- a/聯覺/index.html
+++ b/聯覺/index.html
@@ -109,7 +109,7 @@
                                  <cite class="work-name-author">康丁斯基 (1923年著)</cite>
                               </div>
                            <div class="project-wrap">
-                                 <img src="./img/Wassily Kandinsky'-several circles.jpg" alt="圓之舞" />
+                                 <img src="./img/Wassily Kandinsky-several circles.jpg" alt="圓之舞" />
                                  <span class="work-name">2. 圓之舞 <br>Several Circles</span>
                                  <cite class="work-name-author">康丁斯基 (1926年著)</cite>
                            </div>
@@ -119,7 +119,7 @@
                                  <cite class="work-name-author">康丁斯基 (1936年著)</cite>
                            </div>
                            <div class="project-wrap">
-                                <img src="./img/O'Keefe-Blue and Green Music (1919-1921).jpg" alt="" />
+                                <img src="./img/O Keefe-Blue and Green Music (1919-1921).jpg" alt="" />
                                 <span class="work-name">4. 藍與綠之樂 <br>Blue and Green Music</span>
                                  <cite class="work-name-author">喬治亞·歐姬芙 (1919年著)</cite>
                            </div>
